Update Blog “2022-08-17-testing”

--- a/collections/_posts/2022-08-17-testing.md
+++ b/collections/_posts/2022-08-17-testing.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Testing
+permalink: /blog/testing
+tags:
+  - post
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tempus iaculis urna id. Ac odio tempor orci dapibus ultrices in iaculis nunc. Ac tortor dignissim convallis aenean et tortor. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae. Facilisi etiam dignissim diam quis enim. Cras semper auctor neque vitae. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Ut etiam sit amet nisl purus in mollis. Porttitor leo a diam sollicitudin tempor. Morbi tristique senectus et netus et malesuada fames ac. Lorem ipsum dolor sit amet consectetur. In iaculis nunc sed augue lacus viverra.
 
