First prod commit

--- a/404.md
+++ b/404.md
@@ -4,4 +4,4 @@ layout: post
 title: 404!
 ---
 
-**Whoops. Either you messed up or I did. Either way, this page doesn't exist. Let me know: [hello@victorbilgin.com](mailto:hello@victorbilgin.com).**
+**Whoops. Either you messed up or I did. Either way, this page does not exist. If you think this page should exist, let me know: [hello@victorbilgin.com](mailto:hello@victorbilgin.com).**
